<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"

        />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_apple"
        android:title="@string/title_apple" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_basket"
        android:title="@string/title_basket" />

    <item
        android:id="@+id/navigation_hurt"
        android:icon="@drawable/ic_hurt"
        android:title="@string/title_hurt" />

    <item
        android:id="@+id/navigation_person"
        android:icon="@drawable/ic_person"
        android:title="@string/title_person" />

</menu>