<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    app:cardCornerRadius="13dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <ImageView
        android:id="@+id/GoodsImageView"
        android:layout_width="wrap_content"
        android:layout_height="285dp"
        android:contentDescription="@string/good_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <androidx.cardview.widget.CardView
        android:id="@+id/goodsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoodsImageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/BlankTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <TextView
                android:id="@+id/TitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="Манго Тайское "
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/SubtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="Премиум (1 шт 300 гр)"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TitleTextView" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SubtitleTextView">

                <TextView
                    android:id="@+id/PriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/background_color"
                    android:fontFamily="@font/ubuntu"
                    android:text="320 ₽"
                    android:textFontWeight="500"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck"
                    tools:targetApi="p" />

                <TextView
                    android:id="@+id/OldPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:fontFamily="@font/ubuntu"
                    android:text="200 ₽"
                    android:textFontWeight="400"
                    android:textSize="15sp"
                    tools:targetApi="p" />

                <TextView
                    android:id="@+id/WeightTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/ubuntu"
                    android:text="300 г"
                    android:textAlignment="textEnd"
                    android:textColor="#515461"
                    android:textFontWeight="400"
                    android:textSize="15sp"
                    tools:targetApi="p" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:theme="@style/Theme.FoodStore"
        app:layout_constraintTop_toBottomOf="@+id/goodsCardView"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/green_700"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabTextColor="@color/black">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DescriptionTab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ParametersTab" />

    </com.google.android.material.tabs.TabLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/shopCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:cardCornerRadius="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/shopConstraintLayuot"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/shopTitle_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="Продавец"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/shopConstraintLayuot"
                tools:targetApi="p" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="21dp"
                android:background="@drawable/border_image"
                android:contentDescription="@string/shopimage"
                android:cropToPadding="true"
                android:padding="4dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout"
                tools:src="@drawable/shop" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/shopTitle_textView">

                <TextView
                    android:id="@+id/shopName_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="Мое Здоровье"
                    android:textColor="@color/black"
                    android:textFontWeight="700"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    tools:targetApi="p" />

                <TextView
                    android:id="@+id/shopSubTitle_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:fontFamily="@font/ubuntu"
                    android:text="1000"
                    android:textColor="@color/text_grey"
                    android:textFontWeight="400"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    tools:targetApi="p" />

            </LinearLayout>

            <ImageView
                android:id="@+id/shopArrow_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Rating_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-13px"
        app:cardCornerRadius="13px"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/GoodsImageView"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/Star_imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/star"
                android:scaleType="center"
                android:src="@drawable/ic_favourite_on" />

            <TextView
                android:id="@+id/Rating_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu"
                android:text="4,6"
                android:textColor="@color/yellow"
                android:textFontWeight="500"
                android:textSize="13sp"
                android:textStyle="normal"
                tools:targetApi="p" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/DescriptionTextView"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:paddingStart="20dp"
        android:paddingEnd="28dp"
        android:paddingTop="31dp"
        android:paddingBottom="27dp"
        android:lineHeight="21sp"
        android:text="New ABC 13 9370, 13.3, 5th Gen CoreA5-8250U, 8GB RAM, 256GB SSD, power UHD Graphics, OS 10 Home, OS Office A J 2016"
        android:textColor="@color/text_grey"
        android:textFontWeight="400"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>